@@ -3,6 +3,7 @@
 	* dotemacs.el:
 	(abbrev-mode): use it in LaTeX-mode
 	(server): in case one wants to use emacs on background
+	(global-set-key): suppress speedbar key, add cvs ones
 
 	* dotemacs-cust.el:
 	(custom-set-variables): break lines in a smarter way
